--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!-- Links -->
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" style="color:White;">Home </a>
+        <a class="nav-link" href="/" style="color:White;">Home </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" style="color:White;" href="/vacations/new">New Cruises</a>
