--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <div class="row">
         <div class="col-lg">
             <div class="row">
+              {% if vacations %}
                 {% for vacation in vacations %}
                   <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card h-100">
@@ -24,6 +25,7 @@
                     </div>
                   </div>
                 {% endfor %}
+                {% endif %}
             </div>
             <!-- /.row -->
         </div>
